# eventsourcing-sqlalchemy

./: .bandit  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: github-actions.yml
docker/: docker-compose-local.yml
eventsourcing_sqlalchemy/: __init__.py  datastore.py  factory.py  models.py  recorders.py
eventsourcingsqlalchemy/: datastore.py  factory.py  models.py  recorders.py
tests/: test_application.py  test_datastore.py  test_docs.py  test_event_sourced_projection.py  test_factory.py  test_noninterleaving_notification_ids.py  test_projection.py  test_recorders.py  utils.py
